--- a/FGM/Views/Shared/_Layout.cshtml
+++ b/FGM/Views/Shared/_Layout.cshtml
@@ -209,9 +209,9 @@
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a href="@Url.Action("CinemaList","Cinema")" class="nav-link">
+                                    <a href="@Url.Action("TeamList","Team")" class="nav-link">
                                         <i class="far fa-check-circle nav-icon text-info"></i>
-                                        <p>ရုပ်ရှင်ရုံ List</p>
+                                        <p>အသင်းအဖွဲ့ List</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
