--- a/FGM/Views/Shared/_Layout.cshtml
+++ b/FGM/Views/Shared/_Layout.cshtml
@@ -215,9 +215,9 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="@Url.Action("GroupList","Cinema")" class="nav-link">
+                                    <a href="@Url.Action("UserBalanceList","UserBalance")" class="nav-link">
                                         <i class="far fa-check-circle nav-icon text-info"></i>
-                                        <p>ရုံ Group List</p>
+                                        <p>UserBalance List</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
